deps/src/cmake-3.13.4/Tests/RunCMake/Syntax/NameWithEscapedTabs-stderr.txt
^CMake Error at NameWithEscapedTabs.cmake:1 \(message\):
  Syntax error in cmake code at

    .*/Tests/RunCMake/Syntax/NameWithEscapedTabs.cmake:1

  when parsing string

    \${var\\	with\\	escaped\\	tab}

  Invalid escape sequence \\.?
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
